changes in order table

--- a/HTML/order.html
+++ b/HTML/order.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>Order for refreshment</title>
 
   <link rel="stylesheet" type="text/css" href="assets/su.css">
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -33,7 +33,7 @@
         <img src="images/download (1) (1).jpg">
         <h3>Lemon Tea</h3>
         <h4>Quantity:<input type="text" value="" /></h4>
-        <button>Order</button>
+        <button value="Lemon Tea">Order</button>
 
       </div>
 
@@ -41,35 +41,35 @@
         <img src="images/tea1.jpg">
         <h3>Tea</h3>
         <h4>Quantity:<input type="text" value="" /></h4>
-        <button>Order</button>
+        <button value="Tea">Order</button>
 
       </div>
       <div class="item">
         <img src="images/water1.jpg">
         <h3>Mineral Water</h3>
         <h4>Quantity:<input type="text" value="" /></h4>
-        <button>Order</button>
+        <button value="Mineral Water">Order</button>
 
       </div>
       <div class="item">
         <img src="images/orange1.jpg">
         <h3>Orange Juice</h3>
         <h4>Quantity:<input type="text" value="" /></h4>
-        <button>Order</button>
+        <button value="Orange Juice">Order</button>
 
       </div>
       <div class="item">
         <img src="images/apple.jpg">
         <h3>Apple Juice</h3>
         <h4>Quantity:<input type="text" value="" /></h4>
-        <button>Order</button>
+        <button value="Apple Juice">Order</button>
 
       </div>
       <div class="item">
         <img src="images/Watermelon.jpg">
         <h3>watermelon juice</h3>
         <h4>Quantity:<input type="text" value="" /></h4>
-        <button>Order</button>
+        <button value="Watermelon Juice">Order</button>
 
       </div>
 
